--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_ADDRESS='mongodb+srv://God:<password>@cluster0.s9tn1lf.mongodb.net/?retryWrites=true&w=majority'
-PORT=3000
+DATABASE_ADDRESS='mongodb+srv://God:isNonBinary@cluster1.2vjpyua.mongodb.net/?retryWrites=true&w=majority'
+PORT=4200
 JWT='RANDOM_TOKEN_SECRET'
